Assert failed in > 200 tests: failed dependencies, but counter didn't change

XMLWordPrintable

    • b34
    • Verified

      > 200 failures in the nightlies

      [2017-11-21T05:29:48.55] debugee.stdout> # Internal Error (/open/src/hotspot/share/ci/ciEnv.cpp:957), pid=15975, tid=16007
      [2017-11-21T05:29:48.55] debugee.stdout> # assert(counter_changed) failed: failed dependencies, but counter didn't change

            Assignee:
            Dean Long
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: