8191688: Assert failed in > 200 tests: failed dependencies, but counter didn't change

Reviewed-by: kvn